Graphic changes and initial part of food & tips

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,5 +63,7 @@
     <string name="title_exercise">Title exercise</string>
     <string name="exercise_picture_descr">Exercise_picture_descr</string>
     <string name="muscle_gain">Muscle gain</string>
+    <string name="food_and_workout_tips">FOOD &amp; WORKOUT TIPS</string>
+    <string name="food_tips_descr_1">Unlock Your Fitness Journey: Tailored Tips for Cutting, Maintaining, and Bulking Up!</string>
 
 </resources>
