--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,5 +77,6 @@
     <string name="i_suggest_you_to_bulk">I suggest you to bulk</string>
     <string name="i_suggest_you_to_maintain">I suggest you to maintain</string>
     <string name="i_suggest_you_to_cut">I suggest you to cut</string>
+    <string name="tips">Tip of the day</string>
 
 </resources>
